--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".EditTextActivity"></activity>
+        <activity android:name=".CheckBoxActivity"></activity>
+        <activity android:name=".RadioButtonActivity" />
+        <activity android:name=".EditTextActivity" />
         <activity android:name=".ButtonActivity" />
         <activity
             android:name=".MainActivity"
