--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
         <activity android:name=".RadioButtonActivity" />
         <activity android:name=".EditTextActivity" />
         <activity android:name=".ButtonActivity" />
+        <activity android:name=".listview.ListViewActivity" />
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
