--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,9 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.github.bumptech.glide:glide:4.9.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
+    // https://mvnrepository.com/artifact/com.android.support/design
+    implementation group: 'com.android.support', name: 'design', version: '28.0.0'
+
 }
 repositories {
     mavenCentral()
