--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".recyclerview.HorizontalRecyclerViewActivity"></activity>
+        <activity android:name=".recyclerview.StaggerActivity"></activity>
+        <activity android:name=".recyclerview.GridRecyclerViewActivity" />
+        <activity android:name=".recyclerview.HorizontalRecyclerViewActivity" />
         <activity android:name=".recyclerview.LinearRecyclerViewActivity" />
         <activity android:name=".recyclerview.RecyclerActivity" />
         <activity android:name=".ImageViewActivity" />
