--- a/broadcast/build.gradle
+++ b/broadcast/build.gradle
@@ -6,7 +6,7 @@ android {
 
 
     defaultConfig {
-        applicationId "com.example.gridview"
+        applicationId "com.example.broadcast"
         minSdkVersion 21
         targetSdkVersion 29
         versionCode 1
@@ -28,9 +28,7 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    //noinspection GradleCompatible
     implementation 'com.android.support:appcompat-v7:28.0.0'
-
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
