--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':myui', ':Fragment', ':Fragmentapplication', ':gridview', ':spinner', ':listview', ':scrollview', ':tab'
+include ':app', ':myui', ':Fragment', ':Fragmentapplication', ':gridview', ':spinner', ':listview', ':scrollview', ':tab', ':broadcast'
