--- a/broadcast2/build.gradle
+++ b/broadcast2/build.gradle
@@ -6,7 +6,7 @@ android {
 
 
     defaultConfig {
-        applicationId "com.example.broadcast"
+        applicationId "com.example.broadcast2"
         minSdkVersion 21
         targetSdkVersion 29
         versionCode 1
