--- a/intent/build.gradle
+++ b/intent/build.gradle
@@ -6,9 +6,9 @@ android {
 
 
     defaultConfig {
-        applicationId "com.example.data"
+        applicationId "com.example.intent"
         minSdkVersion 21
-        targetSdkVersion 28
+        targetSdkVersion 29
         versionCode 1
         versionName "1.0"
 
