--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,8 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
     // https://mvnrepository.com/artifact/com.android.support/design
     implementation group: 'com.android.support', name: 'design', version: '28.0.0'
+    implementation 'org.jetbrains:annotations-java5:15.0'
+    implementation 'com.android.support:support-annotations:28.0.0'
 
 }
 repositories {
