--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.CALL_PHONE" />
-    <uses-permission android:name="android.permission.READ_CONTACTS"/>
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
 
     <application
         android:allowBackup="true"
@@ -15,7 +15,11 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".permission.ContactsActivity"></activity>
+        <activity android:name=".data.PasswordActivity"/>
+        <activity android:name=".data.DataMainActivity" />
+        <activity android:name=".data.DataActivity" />
+        <activity android:name=".data.SharedActivity" />
+        <activity android:name=".permission.ContactsActivity" />
         <activity android:name=".permission.PermissionActivity" />
         <activity android:name=".permission.PermissionMainActivity" />
         <activity android:name=".res.DrawableActivity" />
