--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':myui', ':Fragment', ':Fragmentapplication', ':gridview', ':spinner', ':listview', ':scrollview', ':tab', ':broadcast', ':broadcast2', ':mutiactivity', ':wechat', ':sharedpreferences', ':sqlite', ':intent'
+include ':app', ':myui', ':Fragment', ':Fragmentapplication', ':gridview', ':spinner', ':listview', ':scrollview', ':tab', ':broadcast', ':broadcast2', ':mutiactivity', ':wechat', ':sqlite', ':intent'
