--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     implementation group: 'com.android.support', name: 'design', version: '28.0.0'
     implementation 'org.jetbrains:annotations-java5:15.0'
     implementation 'com.android.support:support-annotations:28.0.0'
+    implementation 'org.litepal.android:java:3.0.0'
 
 }
 repositories {
