--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,9 +15,13 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".data.LitePalActivity">
+        <provider
+            android:name=".data.MyDatabaseProvider"
+            android:authorities="com.example.myapplication.data"
+            android:enabled="true"
+            android:exported="true"></provider>
 
-        </activity>
+        <activity android:name=".data.LitePalActivity" />
         <activity android:name=".data.SqliteActivity" />
         <activity android:name=".data.PasswordActivity" />
         <activity android:name=".data.DataMainActivity" />
