--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     implementation 'org.jetbrains:annotations-java5:15.0'
     implementation 'com.android.support:support-annotations:28.0.0'
     implementation 'org.litepal.android:java:3.0.0'
+    //implementation 'com.squareup.okhttp3:okhttp:4.0.1'
 
 }
 repositories {
