--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,8 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.CALL_PHONE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -15,7 +17,17 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".broadcast.offline.LoginSuccessActivity"></activity>
+        <activity android:name=".network.OkHttpActivity"></activity>
+        <activity android:name=".network.UrlActivity" />
+        <activity android:name=".network.NetworkMainActivity" />
+        <activity android:name=".media.VideoActivity" />
+        <activity android:name=".media.MediaActivity" />
+        <activity android:name=".media.PhotoActivity" />
+        <activity android:name=".media.MediaMainActivity" />
+        <activity android:name=".notification.Noti2Activity" />
+        <activity android:name=".notification.NotificationActivity" />
+        <activity android:name=".notification.NotiMainActivity" />
+        <activity android:name=".broadcast.offline.LoginSuccessActivity" />
         <activity android:name=".broadcast.offline.LoginActivity" />
         <activity android:name=".broadcast.offline.BaseActivity" />
         <activity android:name=".broadcast.OfflineActivity" />
@@ -27,6 +39,15 @@
             android:authorities="com.example.myapplication.data"
             android:enabled="true"
             android:exported="true" />
+        <provider
+            android:name="android.support.v4.content.FileProvider"
+            android:authorities="com.example.myapplication.media"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths" />
+        </provider>
 
         <activity android:name=".data.LitePalActivity" />
         <activity android:name=".data.SqliteActivity" />
