--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,8 +34,8 @@ dependencies {
     implementation 'org.jetbrains:annotations-java5:15.0'
     implementation 'com.android.support:support-annotations:28.0.0'
     implementation 'org.litepal.android:java:3.0.0'
-//    implementation 'com.squareup.okhttp3:okhttp:4.0.1'
-    implementation group: 'com.squareup.okhttp3', name: 'okhttp', version: '4.0.1'
+    implementation 'com.squareup.okhttp3:okhttp:3.10.0'
+//    implementation 'com.squareup.okhttp3', name: 'okhttp', version: '4.0.0'
 
 
 }
