--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
 
     <application
         android:allowBackup="true"
@@ -17,7 +18,35 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".network.OkHttpActivity"></activity>
+        <activity android:name=".lbs.GaodeActivity"></activity>
+        <activity android:name=".lbs.BaiduActivity" />
+        <activity android:name=".lbs.LBSMainActivity" />
+
+        <service
+            android:name=".service.download.DownloadService"
+            android:enabled="true"
+            android:exported="true" />
+        <service
+            android:name=".service.MyIntentService"
+            android:enabled="true"
+            android:exported="true" />
+
+        <activity android:name=".service.IntentServiceActivity" />
+        <activity android:name=".service.ForeActivity" />
+        <activity android:name=".service.ServiceActivity" />
+
+        <service
+            android:name=".service.MyService"
+            android:enabled="true"
+            android:exported="true" />
+        <service
+            android:name=".service.ForeService"
+            android:enabled="true"
+            android:exported="true" />
+
+        <activity android:name=".service.ThreadActivity" />
+        <activity android:name=".service.ServiceMainActivity" />
+        <activity android:name=".network.OkHttpActivity" />
         <activity android:name=".network.UrlActivity" />
         <activity android:name=".network.NetworkMainActivity" />
         <activity android:name=".media.VideoActivity" />
