--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,11 +31,14 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
     // https://mvnrepository.com/artifact/com.android.support/design
     implementation group: 'com.android.support', name: 'design', version: '28.0.0'
+    implementation 'de.hdodenhof:circleimageview:3.0.0'
     implementation 'org.jetbrains:annotations-java5:15.0'
     implementation 'com.android.support:support-annotations:28.0.0'
     implementation 'org.litepal.android:java:3.0.0'
     implementation 'com.squareup.okhttp3:okhttp:3.10.0'
 //    implementation 'com.squareup.okhttp3', name: 'okhttp', version: '4.0.0'
+    implementation 'com.github.bumptech.glide:glide:4.9.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
 
 
 }
