--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,16 +9,17 @@
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE"/>
-    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission
+        android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"
         tools:ignore="ProtectedPermissions" />
-    <uses-permission android:name="android.permission.WAKE_LOCK"/>
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <application
         android:allowBackup="true"
@@ -28,10 +29,20 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
+        <activity android:name=".material.CardViewActivity"></activity>
+        <activity android:name=".material.FloatingButtonActivity" />
+        <activity android:name=".material.NavigationViewActivity" />
+        <activity android:name=".material.DrawerLayoutActivity" />
+        <activity
+            android:name=".material.ToolbarActivity"
+            android:label="Fruits" />
+        <activity android:name=".material.MaterialMainActivity" />
+
         <meta-data
             android:name="com.baidu.lbsapi.API_KEY"
-            android:value="WH3Nh0Ej14GRS8H4hiljSLURGGSG5cXO"/>
-        <activity android:name=".lbs.GaodeActivity"></activity>
+            android:value="WH3Nh0Ej14GRS8H4hiljSLURGGSG5cXO" />
+
+        <activity android:name=".lbs.GaodeActivity" />
         <activity android:name=".lbs.BaiduActivity" />
         <activity android:name=".lbs.LBSMainActivity" />
 
@@ -43,9 +54,10 @@
             android:name=".service.MyIntentService"
             android:enabled="true"
             android:exported="true" />
-        <service android:name="com.baidu.location.f"
+        <service
+            android:name="com.baidu.location.f"
             android:enabled="true"
-            android:process=":remote"/>
+            android:process=":remote" />
 
         <activity android:name=".service.IntentServiceActivity" />
         <activity android:name=".service.ForeActivity" />
