--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,10 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".animation.CleanActivity"></activity>
+        <activity android:name=".graphics.MyViewActivity"></activity>
+        <activity android:name=".graphics.MatrixActivity" />
+        <activity android:name=".graphics.DrawableMainActivity" />
+        <activity android:name=".animation.CleanActivity" />
         <activity android:name=".animation.MainActivity" />
         <activity android:name=".animation.Guide3Activity" />
         <activity android:name=".animation.Guide2Activity" />
