--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,8 +19,7 @@ android {
 }
 
 dependencies {
-
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.android.support:design:28.0.0'
@@ -31,17 +30,16 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.9.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
     // https://mvnrepository.com/artifact/com.android.support/design
-    implementation group: 'com.android.support', name: 'design', version: '28.0.0'
+    implementation 'com.android.support:design:28.0.0'
     implementation 'de.hdodenhof:circleimageview:3.0.0'
     implementation 'org.jetbrains:annotations-java5:15.0'
     implementation 'com.android.support:support-annotations:28.0.0'
     implementation 'org.litepal.android:java:3.0.0'
     implementation 'com.squareup.okhttp3:okhttp:3.10.0'
-//    implementation 'com.squareup.okhttp3', name: 'okhttp', version: '4.0.0'
+    //    implementation 'com.squareup.okhttp3', name: 'okhttp', version: '4.0.0'
     implementation 'com.github.bumptech.glide:glide:4.9.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
-
-
+    implementation files('libs/pinyin4j-2.5.0.jar')
 }
 repositories {
     mavenCentral()
