--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,10 +11,12 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".selfview.ContactActivity"></activity>
+        <activity android:name=".selfview.MyTestActivity"></activity>
+        <activity android:name=".selfview.SlideDeleteActivity" />
+        <activity android:name=".selfview.ContactActivity" />
         <activity
             android:name=".selfview.BarActivity"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".animation.Rotate3DTwoActivity" />
         <activity android:name=".animation.Rotation3DActivity" />
         <activity android:name=".selfview.ViewGroupActivity1" />
